Fix: cloud code vertical scroll (#460)
* fix vertical scrollbar design on cloud code

* remove extra padding on filePreview component

--- a/src/components/B4ACodeTree/B4ACodeTree.scss
+++ b/src/components/B4ACodeTree/B4ACodeTree.scss
@@ -14,16 +14,14 @@
   .filePreview {
     flex: 0 0 66.66667%;
     max-width: 66.66667%;
-    padding-right: 15px;
-  }
-
-  .codeContainer {
-    margin-right: -15px;
-    margin-left: -15px;
   }
 }
 
 .codeContainer {
+  position: absolute;
+  top: 48px; // toolbar height
+  width: 100%;
+  height: calc(100% - 48px - 50px); // toolbar + footer height
   display: flex;
   flex-wrap: wrap;
   flex: 1;
