--- a/src/dashboard/Data/CloudCode/B4ACloudCode.scss
+++ b/src/dashboard/Data/CloudCode/B4ACloudCode.scss
@@ -58,6 +58,10 @@
 
 .footer {
   // padding: 20px 0 20px 0;
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  background: #f9f9f9;
   display: flex;
   justify-content: space-between;
   border-top: 2px solid lightgrey;
