--- a/src/dashboard/Data/CloudCode/B4ACloudCodeToolbar.scss
+++ b/src/dashboard/Data/CloudCode/B4ACloudCodeToolbar.scss
@@ -1,5 +1,7 @@
 
 .title {
-  position: initial;
+  position: absolute;
+  left: 0;
+  width: 100%;
   margin-top: 0px;
 }
